feat(shortcuts): add custom and rofi
Define Rofi PowerMenu.
Define custom and Rofi shortcuts in sxhkd.
Include and reorder shortcuts on Conky.

--- a/.config/conky/shortcuts.conf
+++ b/.config/conky/shortcuts.conf
@@ -40,7 +40,7 @@ conky.config = {
     -- Size
     minimum_height = 200,                       -- minimum height of window
     minimum_width = 260,                        -- minimum width of window
-    maximum_width = 400,                        -- maximum width of window
+    maximum_width = 500,                        -- maximum width of window
 
     --Graphical
     border_inner_margin = 5,                    -- margin between border and text
@@ -107,50 +107,51 @@ ${alignc}${color0}General
 ${color0}$hr${voffset 5}
 ${color1}Close Win${alignr}${color5}Super + W
 ${color1}Close All same Win${alignr}${color5}Super + Shift + W
-${color1}Change Desktop${alignr}${color5}Super + {1, 2, ...}
-${color1}Mover Win to Desktop${alignr}${color5}    Super + Shift + {1, 2, ...}
+${color1}Change Desktop {1, 2, ...}${alignr}${color5}Super + {1, 2, ...}
+${color1}Move Win to Desktop (W2D)${alignr}${color5}  Super + Shift + {1}
+${color1}Move & Follow W2D ${color7}*${alignr}${color5}Super + Ctrl + Shift + {1}
+${color1}Alt + Tab ${color7}*${alignr}${color5}Super + Tab
 ${color0}$hr${voffset 5}
-${color1}dmenu${alignr}${color5}Super + Espacio
-${color1}Menú Rofi${alignr}${color5}Super + Alt + D
-${color0}$hr${voffset 5}
+${color1}Power Menu ${color7}*${alignr}${color5}Ctrl + Shift + Escape
 ${color1}Close Session${alignr}${color5}Super + Alt + Q
 ${color1}Restart BSPWM${alignr}${color5}Super + Alt + R
 ${color1}Restart SXHKD${alignr}${color5}Super + Escape
+${color1}Lock ${color7}*${alignr}${color5}Super + Ctrl + Alt + L
 ${voffset 5}${color0}$hr${voffset 3}
-${alignc}${color0}Apps
+${alignc}${color0}Apps ${color7}*
 ${color0}$hr${voffset 5}
 ${color1}Terminal${alignr}${color5}Super + Enter
-${color1}Thunar${alignr}${color5}Super + Alt + E
+${color1}Terminal Drop Down${alignr}${color5}Super + Shift + Enter
+${color1}dmenu${alignr}${color5}Super + Space
+${color1}Rofi Apps${alignr}${color5}Super + D
+${color1}Rofi Combi${alignr}${color5}Super + Alt + D
+${color1}Thunar${alignr}${color5}Super + E
 ${color1}Firefox${alignr}${color5}Super + Alt + F
-${color1}Clementine${alignr}${color5}Super + Alt + M
-${color1}OBS Studio${alignr}${color5}Super + Alt + O
 ${voffset 5}${color0}$hr${voffset 3}
-${alignc}${color0}Layouts
+${alignc}${color0}Layout
 ${color0}$hr${voffset 5}
-${color1}Monocle o Tiled${alignr}${color5}Super + M
-${color1}Tiled${alignr}${color5}Super + T
-${color1}Pseudo Tiled${alignr}${color5}Super + Shift + T
-${color1}Full Screen${alignr}${color5}Super + F
-${color1}Floating${alignr}${color5}Super + S
+${color1}Monocle or Tiled${alignr}${color5}Super + M
+${color1}Toggle Tiled ${color7}*${alignr}${color5}Super + T
+${color1}Toggle Pseudo Tiled ${color7}*${alignr}${color5}Super + Shift + T
+${color1}Toggle Full Screen ${color7}*${alignr}${color5}Super + F
+${color1}Toggle Floating ${color7}*${alignr}${color5}Super + Shift + F
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Focus
 ${color0}$hr${voffset 5}
-${color1}Next Win${alignr}${color5}Super + C
-${color1}Previous Win${alignr}${color5}Super + Shift + C
-${color1}Win's Tree Right${alignr}${color5}Super + I
-${color1}Win's Tree Left${alignr}${color5}Super + O
-${color1}Win's Brother${alignr}${color5} Super + B
-${color1}Win's Parent${alignr}${color5} Super + P
-${color1}Show Opened Win${alignr}${color5}Super + Alt + Tab
+${color1}Win Next {Previous}${alignr}${color5}Super + C + {Shift}
+${color1}Win's Tree {Right, Left}${alignr}${color5}Super + {I, O}
+${color1}Win's {Brother, Parent}${alignr}${color5} Super + {B, P}
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Location
 ${color0}$hr${voffset 5}
 ${color1}Swap with Bigger${alignr}${color5}Super + G
+${color1}Rotate Tree ${color7}*${alignr}${color5}Super + Shift + {A, D}
 ${color1}Move Floating Win${alignr}${color5}Super + {←, ↓, ↑, →}
 ${color1}Move Focus${alignr}${color5}Super + {H, J, K, L}
 ${color1}Swap Win${alignr}${color5}Super + Shift + {H, J, K, L}
 ${color1}Expand Win${alignr}${color5}Super + Alt + {H, J, K, L}
 ${color1}Contract Win${alignr}${color5}Super + Alt + Shift + {H, J, K, L}
-${color1}Preselect Space${alignr}${color5}Super + Control + {H, J, K, L}
-${color1}Cancel Preselect Space${alignr}${color5}Super + Control + Space
+${color1}Preselect Space${alignr}${color5}Super + Ctrl + {H, J, K, L}
+${color1}Move to Preselect ${color7}*${alignr}${color5}Super + Ctrl + M
+${color1}Cancel Preselect${alignr}${color5}Super + Ctrl + Space
 ]]
