feat(font): add nerd fonts
Define script to download Nerd Fonts.
- CaskaydiaCove
- CommitMono
- Hack
- FiraCode
- Hasklug
- MesloLG
Use CommitMono in terminal.
Use MesloLGS in rofi.
Use MesloLGS and DejaVu Sans in conky.

--- a/.config/conky/shortcuts.conf
+++ b/.config/conky/shortcuts.conf
@@ -62,10 +62,10 @@ conky.config = {
 
     --Textual
     format_human_readable = true,               -- KiB, MiB rather then number of bytes
-    font  = 'JetBrains Mono:bold:size=10',      -- the default font used
-    font2 = 'Raleway:bold:size=30',             -- font for the time
-    font3 = 'Ubuntu:size=14',                   -- font for the date
-    font4 = 'Raleway:bold:size=9',              -- font for the keybindings heading
+    font  = 'DejaVu Sans:bold:size=9',          -- the default font used
+    font2 = 'MesloLGS Nerd Font:bold:size=32',  -- font for logo
+    font3 = 'DejaVu Sans:bold:size=16',         -- font for title
+    font4 = 'MesloLGS Nerd Font Mono:bold:size=9',   -- font for the keybindings
     max_text_width = 0,                         -- 0 will make sure line does not get broken if width too smal
     max_user_text = 16384,                      -- max text in conky default 16384
     override_utf8_locale = true,                -- force UTF8 requires xft
@@ -101,57 +101,57 @@ conky.config = {
 };
 
 conky.text = [[
-${alignc}${font3}${color0}Shortcuts${font}
-${voffset 15}${color0}$hr${voffset 3}
+${alignc}${font2}${color0} ${font3}${voffset -5}  Shortcuts${voffset 5}${font}
+${voffset 10}${color0}$hr${voffset 3}
 ${alignc}${color0}General
 ${color0}$hr${voffset 5}
-${color1}Close Win${alignr}${color5}Super + W
-${color1}Close All same Win${alignr}${color5}Super + Shift + W
-${color1}Change Desktop {1, 2, ...}${alignr}${color5}Super + {1, 2, ...}
-${color1}Move Win to Desktop (W2D)${alignr}${color5}  Super + Shift + {1}
-${color1}Move & Follow W2D ${color7}*${alignr}${color5}Super + Ctrl + Shift + {1}
-${color1}Alt + Tab ${color7}*${alignr}${color5}Super + Tab
+${color1}Close Win${alignr}${font4}${color5}Super + W${font}
+${color1}Close All same Win${alignr}${font4}${color5}Super + Shift + W${font}
+${color1}Change Desktop {1, 2, ...}${alignr}${font4}${color5}Super + {1, 2, ...}${font}
+${color1}Move Win to Desktop (W2D)${alignr}${font4}${color5}  Super + Shift + {1}${font}
+${color1}Move & Follow W2D ${color7}*${alignr}${font4}${color5}Super + Ctrl + Shift + {1}${font}
+${color1}Alt + Tab ${color7}*${alignr}${font4}${color5}Super + Tab${font}
 ${color0}$hr${voffset 5}
-${color1}Power Menu ${color7}*${alignr}${color5}Ctrl + Shift + Escape
-${color1}Close Session${alignr}${color5}Super + Alt + Q
-${color1}Restart BSPWM${alignr}${color5}Super + Alt + R
-${color1}Restart SXHKD${alignr}${color5}Super + Escape
-${color1}Lock ${color7}*${alignr}${color5}Super + Ctrl + Alt + L
+${color1}Power Menu ${color7}*${alignr}${font4}${color5}Ctrl + Shift + Escape${font}
+${color1}Close Session${alignr}${font4}${color5}Super + Alt + Q${font}
+${color1}Restart BSPWM${alignr}${font4}${color5}Super + Alt + R${font}
+${color1}Restart SXHKD${alignr}${font4}${color5}Super + Escape${font}
+${color1}Lock ${color7}*${alignr}${font4}${color5}Super + Ctrl + Alt + L${font}
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Apps ${color7}*
 ${color0}$hr${voffset 5}
-${color1}Terminal${alignr}${color5}Super + Enter
-${color1}Terminal Drop Down${alignr}${color5}Super + Shift + Enter
-${color1}dmenu${alignr}${color5}Super + Space
-${color1}Rofi Apps${alignr}${color5}Super + D
-${color1}Rofi Combi${alignr}${color5}Super + Alt + D
-${color1}Thunar${alignr}${color5}Super + E
-${color1}Firefox${alignr}${color5}Super + Alt + F
+${color1}Terminal${alignr}${font4}${color5}Super + Enter${font}
+${color1}Terminal Drop Down${alignr}${font4}${color5}Super + Shift + Enter${font}
+${color1}dmenu${alignr}${font4}${color5}Super + Space${font}
+${color1}Rofi Apps${alignr}${font4}${color5}Super + D${font}
+${color1}Rofi Combi${alignr}${font4}${color5}Super + Alt + D${font}
+${color1}Thunar${alignr}${font4}${color5}Super + E${font}
+${color1}Firefox${alignr}${font4}${color5}Super + Alt + F${font}
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Layout
 ${color0}$hr${voffset 5}
-${color1}Monocle or Tiled${alignr}${color5}Super + M
-${color1}Toggle Tiled ${color7}*${alignr}${color5}Super + T
-${color1}Toggle Pseudo Tiled ${color7}*${alignr}${color5}Super + Shift + T
-${color1}Toggle Full Screen ${color7}*${alignr}${color5}Super + F
-${color1}Toggle Floating ${color7}*${alignr}${color5}Super + Shift + F
+${color1}Monocle or Tiled${alignr}${font4}${color5}Super + M${font}
+${color1}Toggle Tiled ${color7}*${alignr}${font4}${color5}Super + T${font}
+${color1}Toggle Pseudo Tiled ${color7}*${alignr}${font4}${color5}Super + Shift + T${font}
+${color1}Toggle Full Screen ${color7}*${alignr}${font4}${color5}Super + F${font}
+${color1}Toggle Floating ${color7}*${alignr}${font4}${color5}Super + Shift + F${font}
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Focus
 ${color0}$hr${voffset 5}
-${color1}Win Next {Previous}${alignr}${color5}Super + C + {Shift}
-${color1}Win's Tree {Right, Left}${alignr}${color5}Super + {I, O}
-${color1}Win's {Brother, Parent}${alignr}${color5} Super + {B, P}
+${color1}Win Next {Previous}${alignr}${font4}${color5}Super + C + {Shift}${font}
+${color1}Win's Tree {Right, Left}${alignr}${font4}${color5}Super + {I, O}${font}
+${color1}Win's {Brother, Parent}${alignr}${font4}${color5} Super + {B, P}${font}
 ${voffset 5}${color0}$hr${voffset 3}
 ${alignc}${color0}Location
 ${color0}$hr${voffset 5}
-${color1}Swap with Bigger${alignr}${color5}Super + G
-${color1}Rotate Tree ${color7}*${alignr}${color5}Super + Shift + {A, D}
-${color1}Move Floating Win${alignr}${color5}Super + {←, ↓, ↑, →}
-${color1}Move Focus${alignr}${color5}Super + {H, J, K, L}
-${color1}Swap Win${alignr}${color5}Super + Shift + {H, J, K, L}
-${color1}Expand Win${alignr}${color5}Super + Alt + {H, J, K, L}
-${color1}Contract Win${alignr}${color5}Super + Alt + Shift + {H, J, K, L}
-${color1}Preselect Space${alignr}${color5}Super + Ctrl + {H, J, K, L}
-${color1}Move to Preselect ${color7}*${alignr}${color5}Super + Ctrl + M
-${color1}Cancel Preselect${alignr}${color5}Super + Ctrl + Space
+${color1}Swap with Bigger${alignr}${font4}${color5}Super + G${font}
+${color1}Rotate Tree ${color7}*${alignr}${font4}${color5}Super + Shift + {A, D}${font}
+${color1}Move Floating Win${alignr}${font4}${color5}Super + {←, ↓, ↑, →}${font}
+${color1}Move Focus${alignr}${font4}${color5}Super + {H, J, K, L}${font}
+${color1}Swap Win${alignr}${font4}${color5}Super + Shift + {H, J, K, L}${font}
+${color1}Expand Win${alignr}${font4}${color5}Super + Alt + {H, J, K, L}${font}
+${color1}Contract Win${alignr}${font4}${color5}  Super + Alt + Shift + {H, J, K, L}${font}
+${color1}Preselect Space${alignr}${font4}${color5}Super + Ctrl + {H, J, K, L}${font}
+${color1}Move to Preselect ${color7}*${alignr}${font4}${color5}Super + Ctrl + M${font}
+${color1}Cancel Preselect${alignr}${font4}${color5}Super + Ctrl + Space${font}
 ]]
