--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -55,6 +55,7 @@ separator = •
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
+font-1 = MesloLGM Nerd Font:size=12:style=Regular;2
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
@@ -89,3 +90,5 @@ pseudo-transparency = true
 ;format-padding = 1
 ;format-margin = 0
 ;format-offset = 0
+
+;format-font = 2
