--- a/.config/conky/qclocktwo.conf
+++ b/.config/conky/qclocktwo.conf
@@ -48,7 +48,7 @@ conky.config = {
 
     --Textual
     format_human_readable = true,               -- KiB, MiB rather then number of bytes
-    font  = 'JetBrains Mono:bold:size=14',      -- the default font used
+    font  = 'MesloLGS Nerd Font:bold:size=14',      -- the default font used
     font2 = 'Raleway:bold:size=30',             -- font for the time
     font3 = 'Ubuntu:size=14',                   -- font for the date
     font4 = 'Raleway:bold:size=9',              -- font for the keybindings heading
