--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,15 +1,17 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[█](red)\
+[](surface0)\
 $os\
 $username\
-[](bg:peach fg:red)\
+$hostname\
+$localip\
+[](bg:mantle fg:blue)\
 $directory\
-[](bg:yellow fg:peach)\
+[](bg:crust fg:mauve)\
 $git_branch\
 $git_status\
-[](fg:yellow bg:green)\
+[](bg:crust fg:red)\
 $c\
 $rust\
 $golang\
@@ -19,11 +21,11 @@ $java\
 $kotlin\
 $haskell\
 $python\
-[](fg:green bg:sapphire)\
+[](bg:crust fg:green)\
 $conda\
-[](fg:sapphire bg:lavender)\
+[](bg:surface0 fg:sky)\
 $time\
-[ ](fg:lavender)\
+[ ](fg:lavender)\
 $cmd_duration\
 $line_break\
 $character"""
@@ -37,7 +39,8 @@ palette = 'catppuccin_macchiato'
 
 [os]
 disabled = false
-style = "bg:red fg:crust"
+style = "bg:surface0 fg:blue"
+format = '[ $symbol ]($style)'
 
 [os.symbols]
 Windows = ""
@@ -62,12 +65,23 @@ RedHatEnterprise = "󱄛"
 
 [username]
 show_always = true
-style_user = "bg:red fg:crust"
-style_root = "bg:red fg:crust"
-format = '[ $user]($style)'
+style_user = "bg:surface0 fg:blue"
+style_root = "bg:surface0 fg:red"
+format = '[$user ]($style)'
+
+[hostname]
+disabled = false
+style = "bg:surface0 fg:green"
+format = '[@$hostname ]($style)'
+
+[localip]
+disabled = false
+ssh_only = true
+style = "bg:surface0 fg:yellow"
+format = '[@$localipv4 ]'
 
 [directory]
-style = "bg:peach fg:crust"
+style = "bg:mantle fg:mauve"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -81,74 +95,74 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:yellow"
-format = '[[ $symbol $branch ](fg:crust bg:yellow)]($style)'
+style = "bg:crust"
+format = '[[ $symbol $branch ](bg:crust fg:maroon)]($style)'
 
 [git_status]
-style = "bg:yellow"
-format = '[[($all_status$ahead_behind )](fg:crust bg:yellow)]($style)'
+style = "bg:crust"
+format = '[[($all_status$ahead_behind )](bg:crust fg:red)]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [c]
 symbol = " "
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [rust]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [golang]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [php]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [java]
 symbol = " "
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [kotlin]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [haskell]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [python]
 symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version)(\(#$virtualenv\)) ](fg:crust bg:green)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $version)(\(#$virtualenv\)) ](bg:crust fg:green)]($style)'
 
 [docker_context]
 symbol = ""
-style = "bg:sapphire"
-format = '[[ $symbol( $context) ](fg:crust bg:sapphire)]($style)'
+style = "bg:crust"
+format = '[[ $symbol( $context) ](bg:crust fg:sky)]($style)'
 
 [conda]
 symbol = "  "
-style = "fg:crust bg:sapphire"
+style = "bg:crust fg:sky"
 format = '[$symbol$environment ]($style)'
 ignore_base = false
 
 [time]
 disabled = false
 time_format = "%R"
-style = "bg:lavender"
-format = '[[  $time ](fg:crust bg:lavender)]($style)'
+style = "bg:surface0 fg:lavender"
+format = '[[  $time ](bg:surface0 fg:lavender)]($style)'
 
 [line_break]
 disabled = false
