feat(starship): update style prompt
Define new style prompt, change symbols.

From this:
 󰣚 user  ~/.config   18:35 

To this:
 󰣚 user  ~/.config   18:35 

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,7 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[ ](bg:surface0 fg:mauve bold)\
+[ ](bg:surface0 fg:mauve bold)\
 $os\
 $username\
 $hostname\
@@ -23,7 +23,7 @@ $haskell\
 $python\
 [](bg:crust fg:sky)\
 $conda\
-[](bg:base fg:subtext0)\
+[](bg:base fg:subtext0)\
 $time\
 [ ](fg:subtext0)\
 $cmd_duration\
@@ -83,7 +83,7 @@ format = '[@$localipv4]($style)'
 
 [directory]
 style = "bg:mantle fg:blue"
-format = "[ $path]($style)"
+format = "[ $path]($style)"
 truncation_length = 4
 truncation_symbol = "…/"
 
@@ -97,7 +97,7 @@ truncation_symbol = "…/"
 [git_branch]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol $branch ](bg:crust fg:red)]($style)'
+format = '[[ $symbol $branch ](bg:crust fg:red)]($style)'
 
 [git_status]
 style = "bg:crust"
@@ -106,57 +106,57 @@ format = '[[($all_status$ahead_behind )](bg:crust fg:red)]($style)'
 [nodejs]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [c]
 symbol = " "
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [rust]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [golang]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [php]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [java]
 symbol = " "
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [kotlin]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [haskell]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version) ](bg:crust fg:green)]($style)'
 
 [python]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $version)(\(#$virtualenv\)) ](bg:crust fg:green)]($style)'
+format = '[[ $symbol( $version)(\(#$virtualenv\)) ](bg:crust fg:green)]($style)'
 
 [docker_context]
 symbol = ""
 style = "bg:crust"
-format = '[[ $symbol( $context) ](bg:crust fg:sky)]($style)'
+format = '[[ $symbol( $context) ](bg:crust fg:sky)]($style)'
 
 [conda]
 symbol = "  "
 style = "bg:crust fg:sky"
-format = '[$symbol$environment ]($style)'
+format = '[$symbol$environment ]($style)'
 ignore_base = false
 
 [time]
