fix(shortcuts): fix power menu
Define new shortcut for PowerMenu.

--- a/.config/conky/shortcuts.conf
+++ b/.config/conky/shortcuts.conf
@@ -112,7 +112,7 @@ ${color1}Move Win to Desktop (W2D)${alignr}${font4}${color5}  Super + Shift + {1
 ${color1}Move & Follow W2D ${color7}*${alignr}${font4}${color5}Super + Ctrl + Shift + {1}${font}
 ${color1}Alt + Tab ${color7}*${alignr}${font4}${color5}Super + Tab${font}
 ${color0}$hr${voffset 5}
-${color1}Power Menu ${color7}*${alignr}${font4}${color5}Ctrl + Shift + Escape${font}
+${color1}Power Menu ${color7}*${alignr}${font4}${color5}Super + Shift + Escape${font}
 ${color1}Close Session${alignr}${font4}${color5}Super + Alt + Q${font}
 ${color1}Restart BSPWM${alignr}${font4}${color5}Super + Alt + R${font}
 ${color1}Restart SXHKD${alignr}${font4}${color5}Super + Escape${font}
