feat(kde-plasma): update configs for new version in debian 13
Define configs for apps in Debian 13 Trixie in KDE Plasma 6.3.6.

--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,4 +1,5 @@
-Net/ThemeName "Breeze"
+Net/SoundThemeName "ocean"
+Net/ThemeName "Breeze-Dark"
 Gdk/UnscaledDPI 98304
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 1
