--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -10,6 +10,7 @@ gtk-icon-theme-name=breeze-dark
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=false
+gtk-sound-theme-name=ocean
 gtk-theme-name=Breeze
 gtk-toolbar-style=3
 gtk-xft-dpi=98304
