--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -8,4 +8,5 @@ gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=breeze-dark
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=false
+gtk-sound-theme-name=ocean
 gtk-xft-dpi=98304
